# rss-toasts

./: .gitignore  pyproject.toml
.github/workflows/: build.yml  build_and_publish.yml  publish.yml
rss_toasts/: db.py  feed.py  gui.py
